[package]
name = "count-active-streams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-cloudwatch = "1.14.0"
aws-sdk-cloudwatchlogs = "1.15.0"
chrono = "0.4.33"
clap = { version = "4.5.0", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
