[package]
name = "print-log-stream-names"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-cloudwatchlogs = "1.15.0"
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
